--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>index</title>
 </head>
 <body>
-$END$
+
+
+<section>
+    <label for="signupEmail"></label>
+    <input type="text" id="signupEmail" placeholder="Enter email" >
+    <input type="text" id="signupps" placeholder="Enter Password" >
+
+    <button type="submit" id="inbtn">Login</button>
+
+</section>
+
+<br><br>
+
+<section>
+    <label for="signupEmail"></label>
+    <input type="text" id="password" placeholder="Enter email" >
+    <input type="text"  id="loginEmail" placeholder="Enter password" >
+    <button type="submit" id="signbtn">Sign Up</button>
+
+</section>
+
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="js.js"></script>
 </body>
 </html>
